--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,10 +12,10 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Install NPM Dependencies
-        run: npm i --prefix app
+        run: npm i
               
       - name: Build
-        run: npm run build --prefix app
+        run: npm run build
 
       - name: Deploy
         uses: s0/git-publish-subdir-action@develop
